# adxl313-rs

./: Cargo.toml  LICENSE-MIT  README.md
src/: conf.rs  lib.rs  register.rs
